Blender crashes with ACCESS_VIOLATION when snapping cursor to camera #29735

Closed
opened 2011-12-31 01:36:53 +01:00 by alb3530 · 3 comments

%%%Reproduced against: builds 43008 (x64) and 43012 (x86).

Select the camera, press Shift S (snap menu) and then "Cursor to selected".

Blender will crash instantly, with exception code C0000005

The problem was reproduced in both WIndows 7 x64 (physical machine, with 3GB of RAM, NVidia 9800 GT, Core 2 Duo E7500 (2.93 GHZ) ) and Windows Developer Preview x86 (running on a virtual machine)

Note: revisions 42955, 42983, and the official 2.61 release don't have this problem.

Best Regards%%%

%%%Reproduced against: builds 43008 (x64) and 43012 (x86). Select the camera, press Shift S (snap menu) and then "Cursor to selected". Blender will crash instantly, with exception code C0000005 The problem was reproduced in both WIndows 7 x64 (physical machine, with 3GB of RAM, NVidia 9800 GT, Core 2 Duo E7500 (2.93 GHZ) ) and Windows Developer Preview x86 (running on a virtual machine) Note: revisions 42955, 42983, and the official 2.61 release don't have this problem. Best Regards%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r43021.%%%

%%%fixed r43021.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29735
No description provided.