fix [#29735] Blender crashes with ACCESS_VIOLATION when snapping cursor to camera